--- a/css/style.css
+++ b/css/style.css
@@ -16,24 +16,69 @@
     border: 0;
     box-sizing: border-box;
 }
-
 body {
     background-color: var(--background);
     font-family: var(--font);
+    font-size: 16px;
+    text-transform: uppercase;
+}
+.header-top {
+    width: 100%;
+    height: 5em;
+    /* background-color: white; */
+}
+.content {
+    width: 100%;
+    max-width: 75em;
+    height: 100%;
+    /* background-color: yellowgreen; */
+    margin: auto
+}
+.flex-spbt-center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-top img {
+    width: 100%;
+    max-width: 21.18em;
+}
+.menu {
+    width: 100%;
+    max-width: 50em;
+}
+.menu ul {
+    list-style-type: none;
+}
+.menu a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 0.9em 0.66em;
+}
+.menu  a:hover{
+    background-color: var(--red);
+    text-shadow: 0 0 20px #ffffff;
+    text-decoration: underline;
+}
+#menu-bars {
+    display: none;
 }
 
-@media screen and (max-width: 1199px){
+
+/* Até 1199px */
+@media screen and (max-width: 74.93em){
     
 }
-
-@media screen and (max-width: 991px){
+/* Até 991 */
+@media screen and (max-width: 61.93em){
     
 }
-
-@media screen and (max-width: 767px){
+/* Até 767 */
+@media screen and (max-width: 47.93em){
     
 }
-
-@media screen and (max-width: 576px){
+/* Até 576 */
+@media screen and (max-width: 36em){
     
 }
