--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,67 @@ body {
 #menu-bars {
     display: none;
 }
-
+.banner {
+position: relative;
+}
+.banner-container {
+    width: 100%;
+    height: 37.5em;
+    /* background-color: rgba(238, 130, 238, 0.315); */
+    position: absolute;
+    top: 0%;
+}
+.banner-content {
+    width: 80%;
+    height: 100%;
+    /* background-color: rgba(255, 255, 255, 0.418); */
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+.banner-text {
+    width: 50%;
+    height: 100%;
+    /* background-color: coral; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+}
+.banner-text h1 {
+    font-size: 5.62em;
+}
+.banner-text p {
+    font-size: 1.87em;
+}
+.banner-text a {
+    color: #ffffff;
+    font-size: 1.87em;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: var(--red);
+    padding: 0.5em 1.2em;
+    border-radius: 0.75em;
+    margin-top: 2em;
+}
+.games {
+    width: 100%;
+    height: 7.5em;
+    /* background-color: yellow; */
+}
+.games ul {
+    width: 100%;
+    /* background-color: red; */
+    list-style-type: none;
+}
+.games img {
+    width: 170px;
+}
+.games ul a:hover img {
+    transition: 0.5;
+    transform: scale(1.5);
+}
 
 /* Até 1199px */
 @media screen and (max-width: 74.93em){
