--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,52 @@ position: relative;
     transition: 0.5;
     transform: scale(1.5);
 }
+.about {
+    height: 31.25em;
+    background-color: var(--blue);
+
+    position: relative;
+}
+.about-angulation {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.angulation {
+    height: 24.125em;
+    width: 100%;
+    background-color: var(--background);
+
+    transform: skewY(-3deg);
+}
+.container-about {
+    color: white;
+    position: absolute;
+    top: 0;
+    text-transform: none;
+}
+.content-about {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.text-about {
+    width: 50%;
+    text-align: justify;
+}
+.text-about h2 {
+    margin-bottom: 1em;
+    font-size: 2.1875em;
+}
+.text-about p {
+    font-size: 1.25em;
+}
+.container-about img {
+    max-width: 31.875;
+}
 
 /* Até 1199px */
 @media screen and (max-width: 74.93em){
