--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@ body {
 #menu-bars {
     display: none;
 }
+
+/* Inicio Banner */
 .banner {
 position: relative;
 }
@@ -204,6 +206,139 @@ position: relative;
 }
 .time2 img {
     margin-left: 0.5em;
+}
+
+/* Notícias */
+.news{
+    width: 100%;
+    height: 61.25em;
+    background-color: #1E1C21;
+}
+.news h2{
+    color: white;
+    font-size: 35px;
+    margin-left: 10%;
+    padding: 30px;
+    padding-left: 0px;
+}
+.content-news{
+    width: 80%;
+    margin: 0 10%;
+    display: flex;
+}
+.news-news{
+    width: 80%;
+}
+.content-tabela{
+    width: 20%;
+}
+.bloco-news{
+    width: 90%;
+    margin-bottom: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.news-bloco{
+    width: 14.81em;
+    height: 22.87em;
+    background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
+    box-shadow: 1px 1px 20px 4px #000000;
+    display: flex;
+    flex-direction: column;
+    transition: 0.2s;
+}
+.news-bloco:hover{
+    transform: scale(1.1);
+}
+.team-tabela{
+    color: white;
+    margin-bottom: 8px;
+    padding: 14px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.2s;
+}
+.team-tabela p{
+    padding-top: 10px;
+    text-decoration: none;
+}
+.placar-tabela{
+    width: 221px;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+.text-bloco{
+    color: white;
+    margin: 10px;
+    margin-top: 0;
+    text-align: justify;
+}
+.text-bloco h3{
+    font-family: 18px;
+    text-transform: uppercase;
+}
+.imagem-bloco img{
+    padding: 0;
+}
+.tabela-news{
+    width: 14.81em;
+    height: 46.93em;
+    background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.205) 25%, rgba(196, 196, 196, 0.062) 87.5%);
+    box-shadow: 1px 1px 20px 4px #000000;
+}
+
+/* Rodapé */
+.footer-flex {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    color: white;
+}
+.footer-links {
+    height: 100%;
+    width: 100px;
+}
+.footer-links ul, a {
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    text-transform: capitalize;
+}
+.footer-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-img img{
+    max-width: 20em;
+}
+.footer-img p {
+    padding-top: 15px;
+}
+.footer-direitos {
+    justify-content: center;
+}
+.footer-direitos a{
+    padding: 0% 7px;
+    align-items: flex-end;
+    font-size: 20px;
+}
+.footer-linksa:hover {
+    color: var(--red);
+    text-decoration: underline;
+}
+.footer-img a:hover {
+    color: var(--red);
+}
+.footer-direitos a:hover {
+    color: var(--red);
 }
 
 
