--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap');
 
-:root {
-
+:root{
+    
     --background: #000000;
+    --bgnews: #1E1C21;
     --red: #C20000;
     --blue: #001F70;
-    --gradient: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
-    
+    --gradient: linear-gradient(180deg, rgba(83, 83, 83, 0.5) 0%, #000000 100%);
     --font: 'Titillium Web', sans-serif;
 }
-
-* {
+*{
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
 }
-body {
+
+body{
     background-color: var(--background);
     font-family: var(--font);
     font-size: 16px;
-    /* text-transform: uppercase; */
 }
-.header-top {
+img{
+    width: 100%;
+}
+.header-top{
     width: 100%;
     height: 5em;
-    /* background-color: white; */
+    /* background-color: aliceblue; */
 }
-.content {
-    width: 100%;
+.content{
+    width: 95%;
     max-width: 75em;
     height: 100%;
-    /* background-color: yellowgreen; */
-    margin: auto
+    /* background-color: aqua; */
+    margin: auto;
 }
-.flex-spbt-center {
+.flex-spbt-center{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.header-top img {
-    width: 100%;
+.flex-spar-center{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.header-top img{
     max-width: 21.18em;
 }
-.menu {
+.menu{
     width: 100%;
     max-width: 50em;
 }
-.menu ul {
+.menu ul{
     list-style-type: none;
+
 }
-.menu a {
-    color: white;
+.menu a{
+    color:#fff;
     text-decoration: none;
     font-size: 1.5em;
+    text-transform: uppercase;
     padding: 0.9em 0.66em;
 }
-.menu  a:hover{
+.menu a:hover{
     background-color: var(--red);
-    text-shadow: 0 0 20px #ffffff;
+    text-shadow: 0 0 20px #fff;
     text-decoration: underline;
 }
-#menu-bars {
+#menu-bars{
     display: none;
 }
-
-/* Inicio Banner */
-.banner {
-position: relative;
+.banner{
+    position: relative;
 }
-.banner-container {
+.banner-container{
     width: 100%;
-    height: 37.5em;
-    /* background-color: rgba(238, 130, 238, 0.315); */
-    position: absolute;
-    top: 0%;
-}
-.banner-content {
-    width: 80%;
     height: 100%;
-    /* background-color: rgba(255, 255, 255, 0.418); */
+    /* background-color: rgba(127, 255, 212, 0.39); */
+    position: absolute;
+    top: 0;
+}
+.banner-content{
+    width: 95%;
+    height: 100%;
+    /* background-color: rgba(255, 235, 205, 0.384); */
     margin: auto;
     display: flex;
     justify-content: flex-end;
 }
-.banner-text {
+.banner-text{
     width: 50%;
     height: 100%;
     /* background-color: coral; */
@@ -92,16 +98,16 @@ position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #ffffff;
+    color:#fff;
 }
-.banner-text h1 {
+.banner-text h1{
     font-size: 5.62em;
 }
-.banner-text p {
+.banner-text p{
     font-size: 1.87em;
 }
-.banner-text a {
-    color: #ffffff;
+.banner-text a{
+    color:#fff;
     font-size: 1.87em;
     text-decoration: none;
     text-transform: uppercase;
@@ -110,22 +116,22 @@ position: relative;
     border-radius: 0.75em;
     margin-top: 2em;
 }
-.games {
+.games{
     width: 100%;
     height: 7.5em;
     /* background-color: yellow; */
 }
-.games ul {
+.games ul{
     width: 100%;
     /* background-color: red; */
     list-style-type: none;
 }
-.games img {
+.games img{
     width: 170px;
 }
-.games ul a:hover img {
-    transition: 0.5;
-    transform: scale(1.5);
+.games ul a:hover img{
+    transition: 0.5s;
+    transform:scale(1.5);
 }
 .about {
     height: 31.25em;
@@ -134,8 +140,8 @@ position: relative;
     position: relative;
 }
 .about-angulation {
-    width: 100%;
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -144,16 +150,15 @@ position: relative;
     width: 100%;
     background-color: var(--background);
 
-    transform: skewY(-3deg);
+    transform: skewY(-4deg);   
 }
 .container-about {
     color: white;
     position: absolute;
     top: 0;
-    text-transform: none;
 }
 .content-about {
-    width: 80%;
+    width: 95%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -170,20 +175,18 @@ position: relative;
 .text-about p {
     font-size: 1.25em;
 }
-.container-about img {
-    max-width: 31.875;
+.content-about img {
+    max-width: 31.875em;
 }
-.games-aovivo::after {
-    content: '';
-    border: solid 1px #ffffff;
-    height: 2em;
-    margin-left: 1em;
+.linha {
+    border:solid 1px white;
+    height: 3em;
 }
-.games-aovivo, .games-embreve {
+.games-aovivo, .games-embreve{
     display: flex;
     color: #ffffff;
     align-items: center;
-    font-size: 1.875em;
+    font-size: 1.5625em;/*30px */
     justify-content: space-between;
 }
 .partida {
@@ -201,94 +204,14 @@ position: relative;
 .partida img {
     width: 1.8em;
 }
-.time1 img{
+.time1 img {
     margin-left: 0.5em;
+
 }
 .time2 img {
-    margin-left: 0.5em;
+    margin-right: 0.5em;
 }
 
-/* Notícias */
-.news{
-    width: 100%;
-    height: 61.25em;
-    background-color: #1E1C21;
-}
-.news h2{
-    color: white;
-    font-size: 35px;
-    margin-left: 10%;
-    padding: 30px;
-    padding-left: 0px;
-}
-.content-news{
-    width: 80%;
-    margin: 0 10%;
-    display: flex;
-}
-.news-news{
-    width: 80%;
-}
-.content-tabela{
-    width: 20%;
-}
-.bloco-news{
-    width: 90%;
-    margin-bottom: 4%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.news-bloco{
-    width: 14.81em;
-    height: 22.87em;
-    background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
-    box-shadow: 1px 1px 20px 4px #000000;
-    display: flex;
-    flex-direction: column;
-    transition: 0.2s;
-}
-.news-bloco:hover{
-    transform: scale(1.1);
-}
-.team-tabela{
-    color: white;
-    margin-bottom: 8px;
-    padding: 14px 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: 0.2s;
-}
-.team-tabela p{
-    padding-top: 10px;
-    text-decoration: none;
-}
-.placar-tabela{
-    width: 221px;
-    height: auto;
-    display: flex;
-    align-items: center;
-}
-.text-bloco{
-    color: white;
-    margin: 10px;
-    margin-top: 0;
-    text-align: justify;
-}
-.text-bloco h3{
-    font-family: 18px;
-    text-transform: uppercase;
-}
-.imagem-bloco img{
-    padding: 0;
-}
-.tabela-news{
-    width: 14.81em;
-    height: 46.93em;
-    background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.205) 25%, rgba(196, 196, 196, 0.062) 87.5%);
-    box-shadow: 1px 1px 20px 4px #000000;
-}
 
 /* Rodapé */
 .footer-flex {
