--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,91 @@ img{
     margin-right: 0.5em;
 }
 
+/* NOTÍCIAS */
+
+.bg-news {
+    width: 100%;
+    height: auto;
+    background-color: var(--bgnews);
+ }
+.news {
+    width: 70%;
+    height: 90%;
+    /* background-color: cadetblue; */
+}
+.news h2, .next-games h2 {
+    color: #ffffff;
+    margin: 1em 0em;
+    font-size: 2.1875em;
+}
+
+.next-games {
+    width: 25%;
+    height: 90%;
+    /* background-color: cadetblue; */
+}
+.content-news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.cardnews {
+    width: 15em;
+    height: 22.5em;
+    background: var(--gradient);
+    color: #ffffff;
+    margin-bottom: 2em;
+    transition: 0.1s;
+    box-shadow: 0px 0px 10px rgb(95, 95, 95), 0px 0px 30px rgb(0, 0, 0);
+
+}
+.cardnews:hover {
+    transform: scale(1.1);
+}
+.cardnews h3{
+    padding: 0.5em 0.6em;
+}
+.cardnews p {
+    padding: 0 0.6em;
+}
+
+.next-games-bg{
+    width: 90%;
+    height: auto;
+    background: var(--gradient); 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 2.4em 0;
+}
+.next-games-match{
+    width: 100%;
+    height: 6.25em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: red; */
+    font-weight: 700;
+    color: #fff;
+}
+.teams{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+}
+.next-games-match div {
+    display: flex;
+    align-items: center;
+}
+.next-games-match img {
+    max-width: 2.5em;
+}
+.next-games-match > p {
+    margin-top: 1em;
+}
+
 
 /* Rodapé */
 .footer-flex {
